more tests to delete

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\deliveriesCompany\deliveriesCompany.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
